Change name to Dynamic Entity Hider

--- a/runelite-plugin.properties
+++ b/runelite-plugin.properties
@@ -1,6 +1,6 @@
-displayName=Example
-author=Nobody
+displayName=Dynamic Entity Hider
+author=Jbleezy
 support=
-description=An example greeter plugin
+description=Hides entities when there are too many showing
 tags=
-plugins=com.example.ExamplePlugin
+plugins=com.dynamicentityhider.DynamicEntityHiderPlugin
