--- a/runelite-plugin.properties
+++ b/runelite-plugin.properties
@@ -1,6 +1,6 @@
 displayName=Dynamic Entity Hider
 author=Jbleezy
 support=
-description=Hides entities when there are too many showing
+description=Hides players when there are too many showing
 tags=
 plugins=com.dynamicentityhider.DynamicEntityHiderPlugin
