Change name to Mouseover Text Disabler

--- a/runelite-plugin.properties
+++ b/runelite-plugin.properties
@@ -1,6 +1,6 @@
-displayName=Example
+displayName=Mouseover Text Disabler
 author=Jbleezy
-support=
-description=An example greeter plugin
-tags=
-plugins=com.example.ExamplePlugin
+support=https://github.com/Jbleezy/runelite-plugins/tree/mouseover-text-disabler
+description=Disables the mouseover text
+tags=mouseover,mouse,over,text,disabler
+plugins=com.mouseovertextdisabler.MouseoverTextDisablerPlugin
